Fix non-fixed header and menu when overflow-x body on touchscreens (#2711)
* Make my-account-videos responsive on small screens

* Make my-account-channels responsive for small screens

* Make search result responsive on small screen

--- a/client/src/app/+my-account/my-account-video-channels/my-account-video-channels.component.scss
+++ b/client/src/app/+my-account/my-account-video-channels/my-account-video-channels.component.scss
@@ -50,6 +50,7 @@
   }
 
   .video-channel-buttons {
+    margin-top: 10px;
     min-width: 190px;
   }
 }
@@ -80,6 +81,10 @@
         flex-direction: column;
         align-items: center !important;
         margin: auto;
+
+        .video-channel-name {
+          margin-left: 0px !important;
+        }
       }
     }
 
@@ -88,7 +93,23 @@
     }
 
     .video-channel-buttons {
-      margin-top: 10px;
+      align-self: center;
+    }
+  }
+}
+
+@media screen and (min-width: breakpoint(lg)) {
+  :host-context(.main-col:not(.expanded)) {
+    .video-channel-buttons {
+      float: right;
+    }
+  }
+}
+
+@media screen and (min-width: $small-view) {
+  :host-context(.expanded) {
+    .video-channel-buttons {
+      float: right;
     }
   }
 }
